spacing fix

--- a/src/compponents/ContentModal/ContentModal.css
+++ b/src/compponents/ContentModal/ContentModal.css
@@ -22,7 +22,7 @@
   justify-content: space-between;
   height: 100%;
   width: 100%;
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
 }
 
 .scrollbar::-webkit-scrollbar {
